tests/Spire.Analyzers.Tests/SPIRE003/cases/Detect_UnionStruct_DefaultLiteral.cs
//@ should_fail
// default literal assigned to UnionLikeStruct — flagged
public class Detect_UnionStruct_DefaultLiteral
{
    public void Method()
    {
        UnionLikeStruct s = default; //~ ERROR
    }
}
